; ModuleID = '/home/carl/AnghaBench/numpy/numpy/random/src/legacy/extr_legacy-distributions.c_legacy_standard_t.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/random/src/legacy/extr_legacy-distributions.c_legacy_standard_t.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @legacy_standard_t(i32* %0, double %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  store i32* %0, i32** %3, align 8
  store double %1, double* %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call double @legacy_gauss(i32* %7)
  store double %8, double* %5, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = load double, double* %4, align 8
  %11 = fdiv double %10, 2.000000e+00
  %12 = call double @legacy_standard_gamma(i32* %9, double %11)
  store double %12, double* %6, align 8
  %13 = load double, double* %4, align 8
  %14 = fdiv double %13, 2.000000e+00
  %15 = call double @sqrt(double %14) #3
  %16 = load double, double* %5, align 8
  %17 = fmul double %15, %16
  %18 = load double, double* %6, align 8
  %19 = call double @sqrt(double %18) #3
  %20 = fdiv double %17, %19
  ret double %20
}

declare dso_local double @legacy_gauss(i32*) #1

declare dso_local double @legacy_standard_gamma(i32*, double) #1

; Function Attrs: nounwind
declare dso_local double @sqrt(double) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
